# opentitan

./: meson.build  openocd_connect_ise.gtkw  openocd_connect_ise_tlul.gtkw  openocd_connect_main.gtkw  plan.md  run_example  setup.sh
hw/: Makefile
hw/dv/dpi/dmidpi/: dmidpi.c
hw/dv/dpi/gpiodpi/: gpiodpi.sv
hw/dv/dpi/jtagdpi/: jtagdpi.c
hw/dv/dpi/uartdpi/: uartdpi.sv
hw/ip/clkmgr/rtl/: clkmgr_pkg.sv
hw/ip/flash_ctrl/data/: flash_ctrl.sv.tpl
hw/ip/flash_ctrl/lint/: flash_ctrl.waiver
hw/ip/ipc/: ipc.core
hw/ip/ipc/data/: ipc.hjson  ipc.prj.hjson  ipc_testplan.hjson
hw/ip/ipc/doc_wip/: _index.md  checklist.html  checklist.md
hw/ip/ipc/dv_wip/: ipc_sim.core  ipc_sim_cfg.hjson
hw/ip/ipc/lint/: ipc.vlt  ipc.waiver
hw/ip/ipc/rtl/: ipc.sv  ipc_reg_pkg.sv  ipc_reg_top.sv
hw/ip/ise/: ise.core  xbar_ise_main.core  xbar_main.core
hw/ip/ise/data/: ise.hjson  ise.prj.hjson  ise_testplan.hjson  xbar_ise_main.hjson  xbar_main.hjson
hw/ip/ise/lint/: ise.vlt  ise.waiver
hw/ip/ise/rtl/: gpo.sv  ibex_debug.sv  ise.sv  ise_core.sv  ise_reg_pkg.sv  ise_reg_top.sv  prim_generic_ram_2p.sv  ram_2p.sv  timer.sv
hw/ip/rv_core_ibex/rtl/: rv_core_ibex.sv
hw/top_earlgrey/: top_earlgrey.core  top_earlgrey_artya7-100.core  top_earlgrey_verilator.core
hw/top_earlgrey/data/: pins_artya7.xdc  top_earlgrey.hjson  top_earlgrey.sv.tpl  xbar_main.hjson
hw/top_earlgrey/data/autogen/: top_earlgrey.gen.hjson
hw/top_earlgrey/dv/autogen/: tb__alert_handler_connect.sv  tb__xbar_connect.sv  xbar_env_pkg__params.sv
hw/top_earlgrey/dv/env/: chip_env_cfg.sv
hw/top_earlgrey/lint/: top_earlgrey_lint_cfgs.hjson
hw/top_earlgrey/rtl/: top_earlgrey_artya7.sv  top_earlgrey_nexysvideo.sv  top_earlgrey_verilator.sv
hw/top_earlgrey/rtl/autogen/: top_earlgrey.sv  top_earlgrey_pkg.sv
hw/top_earlgrey/sw/autogen/: top_earlgrey.c  top_earlgrey.h  top_earlgrey_memory.h  top_earlgrey_memory.ld
hw/top_ise/: _index.html  _index.md  top_ise.core  top_ise_pkg.core  top_ise_verilator.cc  top_ise_verilator.core
hw/top_ise/data/: clocks.xdc  pins_nexysvideo.xdc  placement.xdc  tb__xbar_connect.sv.tpl  top_ise.hjson  top_ise.original.hjson  top_ise.sv.tpl  top_ise_rnd_cnst_pkg.sv.tpl  xbar_main.hjson
hw/top_ise/data/autogen/: top_ise.gen.hjson
hw/top_ise/dv/autogen/: tb__alert_handler_connect.sv  tb__xbar_connect.sv  xbar_env_pkg__params.sv
hw/top_ise/fpv/: top_ise_fpv_cfgs.hjson
hw/top_ise/ip/alert_handler/: alert_handler_reg.core
hw/top_ise/ip/ast/: ast_wrapper_pkg.core
hw/top_ise/ip/clkmgr/: clkmgr.core
hw/top_ise/ip/padctrl/: padctrl_reg.core
hw/top_ise/ip/pinmux/: pinmux_reg.core
hw/top_ise/ip/pwrmgr/: pwrmgr_reg.core
hw/top_ise/ip/rv_plic/: rv_plic.core
hw/top_ise/ip/xbar_main/: xbar_main.core
hw/top_ise/ip/xbar_peri/: xbar_peri.core
hw/top_ise/lint/: top_ise.vlt  top_ise.waiver  top_ise_dv_lint_cfgs.hjson  top_ise_fpv_lint_cfgs.hjson  top_ise_lint_cfgs.hjson
hw/top_ise/rtl/: top_ise_verilator.sv
hw/top_ise/rtl/autogen/: top_ise.sv  top_ise_pkg.sv  top_ise_rnd_cnst_pkg.sv
hw/top_ise/sw/autogen/: top_ise.c  top_ise.h  top_ise_memory.h
hw/top_ise/syn/: top_ise_syn_cfg.hjson
hw/top_ise/util/: opentitan_earlgrey_flash_size_check.core  opentitan_earlgrey_flash_size_reduce.py  opentitan_ise_flash_size_check.py  opentitan_ise_usbdev_pin_config_sim.sh  vivado_hook_opt_design_post.tcl
sw/device/: meson.build
sw/device/boot_rom/: rom_crt.S
sw/device/boot_rom2/: meson.build  rom_crt.S  rom_link.ld
sw/device/examples/: meson.build
sw/device/examples/ping_aes/: README.html  README.md  meson.build  ping_aes.c
sw/device/examples/ping_ipc/: README.html  README.md  meson.build  ping_ipc.c
sw/device/examples/ping_ise/: README.html  README.md  meson.build
sw/device/lib/: aes2.c  aes2.h  ipc.c  ipc.h  ise.c  ise.h  meson.build
sw/device/lib/dif/: dif_plic.c  meson.build
sw/device/ram_code/: meson.build  ram_code.c  ram_link.ld  startup.S
sw/device/tests/dif/: dif_plic_unittest.cc  meson.build
util/: tlgen.py  topgen.py
util/openocd/board/: lowrisc-earlgrey-artya7.cfg
util/openocd/interface/: digilent-hs2.cfg
util/reggen/: gen_rtl.py
(+92 files in other folders)
